# easy-shader-runner

./: Cargo.toml  flake.nix
easy-shader-runner/src/: app.rs  controller.rs  ui.rs
example/shader/shader/src/: lib.rs
example/src/: lib.rs
