[workspace]
resolver = "2"
members = [
  "easy-shader-runner",
  "example",
  "example/builder",
  "example/shader/shader",
]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/abel465/easy-shader-runner"

[workspace.dependencies]
bytemuck = { version = "1.22.0", default-features = false }
glam = { version = "0.30.8", default-features = false }

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "b3eda4df9814b6176d3c0844eb67f70a22ebb378"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "b3eda4df9814b6176d3c0844eb67f70a22ebb378"

[profile.dev]
package.spirv-tools-sys.opt-level = 1
